fix dots on dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -379,15 +379,15 @@ body.dark-mode::before {
             0deg,
             transparent,
             transparent 2px,
-            rgba(255, 255, 255, 0.015) 2px,
-            rgba(255, 255, 255, 0.015) 4px
+            rgba(255, 255, 255, 0.35) 2px,
+            rgba(255, 255, 255, 0.35) 4px
         ),
         repeating-linear-gradient(
             90deg,
             transparent,
             transparent 2px,
-            rgba(255, 255, 255, 0.015) 2px,
-            rgba(255, 255, 255, 0.015) 4px
+            rgba(255, 255, 255, 0.35) 2px,
+            rgba(255, 255, 255, 0.35) 4px
         );
 }
 
